# bdr-vocabs

./: README.md  catalogue.ttl  labels.ttl  manifest.ttl  pyproject.toml
source/: epbc-statuses-2026-04-20.csv  org_descs.py  orgs-unknown.csv  orgs.csv  orgs.py  orgs_2025_08_new.csv  orgs_check_iri.py  orgs_new_only.py
source/datasets/epbc-mig/: afd-matches.csv  epbc-mig.csv  epbc-mig.ttl
source/datasets/epbc-ts/: afd-matches-ambiguous.csv  afd-matches-unresolved.csv  epbc-ts.ttl  hits.ttl  misses.csv
source/datasets/wons/: misses.csv  name-check-weeds.csv  wons.csv  wons.ttl
source/epbc-dataset/: epbc-threatened-species.ttl
source/scripts/name-matching/: afd-name-match.py  test.csv
tmp/: orgs.nt
validation/: validate_all.py
vocabs/: RoleCode.ttl  bdr-datatypes.ttl  bdr-submitting-organisations.ttl  datatypes.ttl  epbc-threatened-species-categories.ttl  epbc-ts-cats.ttl  nsl-tn-types.ttl  nsl-tnu-types.ttl  observable-properties.ttl  obsprops.ttl  orgs.ttl  q3-org-like-iris-without-labels.sparql  sma.ttl  smrr.ttl  statsprops.ttl  submission_actions.ttl  submitting-organisations.ttl
