[tool.poetry]
name = "bdr-vocabs"
version = "0.1.0"
description = ""
authors = ["Nicholas Car <nick@kurrawong.ai>"]
readme = "README.md"
packages = [{include = "bdr_vocabs"}]

[tool.poetry.dependencies]
python = "^3.11"
cmem-plugin-pyshacl = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
